# Stock_portfolio_recommendation_engine

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_compose.yml  evaluate_pipeline.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
app/: main.py
app/api/: routes.py  schemas.py
app/core/: cache.py  config.py  disk_cache.py  logger.py  validators.py
app/data/: fetcher.py  pit_fundamentals.py
app/data/cache/: AAPL_20260321.json  ABBV_20260321.json  ABT_20260321.json  ADBE_20260321.json  AMD_20260321.json  AMZN_20260321.json  AVGO_20260321.json  AXP_20260321.json  BAC_20260321.json  BLK_20260321.json  BMY_20260321.json  COP_20260321.json  COST_20260321.json  CRM_20260321.json  CVX_20260321.json  C_20260321.json  DHR_20260321.json  EOG_20260321.json  GOOGL_20260321.json  GS_20260321.json  HD_20260321.json  INTC_20260321.json  JNJ_20260321.json  JPM_20260321.json  KO_20260321.json  LLY_20260321.json  MCD_20260321.json  META_20260321.json  MRK_20260321.json  MSFT_20260321.json  MS_20260321.json  NKE_20260321.json  NVDA_20260321.json  ORCL_20260321.json  PEP_20260321.json  PFE_20260321.json  (+14 more)
app/evaluation/: backtester.py
app/features/: fundamental.py  fundamentals.py  technical.py
app/models/: clustering.py  optimizer.py  similarity.py  summarizer.py
app/services/: recommender.py  summarizer.py
static/: dashboard.html
tests/: conftest.py  test_cache.py  test_evaluation.py  test_features.py  test_fetcher.py  test_recommender.py  test_routes.py  test_summarizer.py  test_validators.py
